cabal-version: 3.0
name:          hmc-sampler
synopsis:      Hamiltonian Monte Carlo sampler
version:       0.0.1.0
homepage:      https://github.com/mcwitt/hmc-sampler
license:       BSD-3-Clause
author:        Matt Wittmann
maintainer:    Matt Wittmann
copyright:     Matt Wittmann
category:      Package.Category
build-type:    Simple

common common
  build-depends:    base >=4.11 && <5
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    HMC
    HMC.Integrator

  ghc-options:     -Wall -fno-warn-name-shadowing
  build-depends:   linear

test-suite hmc-sampler-tests
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -Wall -threaded
  other-modules:  Test.HMC.Integrator
  build-depends:
    , hedgehog
    , hmc-sampler
    , linear

executable viz
  import:         common
  hs-source-dirs: viz
  main-is:        Main.hs
  build-depends:
    , diagrams
    , diagrams-lib
    , diagrams-svg
    , hmc-sampler
